libs/wingc/src/lsp/snapshots/hovers/new_statement.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nclass Bucket\n```\n---\nA cloud object store."
range:
  start:
    line: 2
    character: 4
  end:
    line: 2
    character: 16

