libs/wingc/src/lsp/snapshots/hovers/statement.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nclass Test impl IInflightHost\n```\n---\nA unit test."
range:
  start:
    line: 1
    character: 0
  end:
    line: 1
    character: 4

