libs/wingc/src/lsp/snapshots/hovers/static_method.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nstatic preflight my: preflight (a: str, b: bool): str\n```"
range:
  start:
    line: 5
    character: 0
  end:
    line: 5
    character: 6

