libs/wingc/src/lsp/snapshots/hovers/struct_decl_field.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nfield: str\n```"
range:
  start:
    line: 2
    character: 2
  end:
    line: 2
    character: 7

