libs/wingc/src/lsp/snapshots/hovers/struct_doc.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nstruct Foo {\n  // No public members\n}\n```\n---\n Struct doc"
range:
  start:
    line: 2
    character: 9
  end:
    line: 2
    character: 12

