libs/wingc/src/lsp/snapshots/hovers/user_defined_type_reference_type.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nclass Foo\n```\n---\n\n### Fields\n- `node` — `Node` — The tree node.\n### Methods\n- `bind` — `preflight (host: IInflightHost, ops: Array<str>): void` — Binds the resource to the host so that it can be used by inflight code.\n- `isConstruct` — `preflight (x: any): bool` — Checks if `x` is a construct.\n- `toString` — `preflight (): str` — Returns a string representation of this construct."
range:
  start:
    line: 4
    character: 0
  end:
    line: 4
    character: 3

