libs/wingc/src/lsp/snapshots/hovers/user_defined_types.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nclass Foo\n```\n---\n\n### Fields\n- `node` — `Node` — The tree node.\n### Methods\n- `isConstruct` — `preflight (x: any): bool` — Checks if `x` is a construct.\n- `onLift` — `preflight (host: IInflightHost, ops: Array<str>): void` — Lifts the resource to the host so that it can be used by inflight code.\n- `toString` — `preflight (): str` — Returns a string representation of this construct."
range:
  start:
    line: 1
    character: 6
  end:
    line: 1
    character: 9

